# traefik-unifi-dns

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  stack.yml
.github/workflows/: ci.yml  publish.yml
app/: auth.py  config.py  controller.py  dashboard.py  docker_client.py  main.py  ports.py  runtime.py  state_store.py  traefik.py  unifi_client.py  web.py
app/templates/: dashboard.html
docs/: decisions.md
tests/: test_auth.py  test_config.py  test_controller.py  test_dashboard.py  test_docker_client.py  test_runtime.py  test_state_store.py  test_unifi_client.py  test_web.py
